# rdp

./: Cargo.toml  README.md  TODO.md  flake.nix
examples/: arithmetic.pfl  compose.pfl  factorial.pfl  higher_order.pfl  nested_let.pfl  precedence.pfl
grammar/: grammar.ebnf
src/: ast.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  tokens.rs
tests/: lexer.rs  parser.rs
